fix: overflow

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -138,7 +138,7 @@ header{
     justify-content: center;
 }
 .header-bottom-side-right img{
-    width: 115%;
+    width: 100%;
 
 }
 
